really fix riscos zip target zip option with a comma in it confused make

--- a/riscos/Makefile.target
+++ b/riscos/Makefile.target
@@ -110,5 +110,5 @@ netsurf.zip: $(EXETARGET)
 	$(Q) $(RM) $@
 	rsync --archive --verbose $(CURDIR)/!NetSurf $($@_TMPDIR)
 	mv $($@_TMPDIR)/!NetSurf/ReadMe $($@_TMPDIR)
-	$(shell cd $($@_TMPDIR) && /opt/netsurf/arm-unknown-riscos/env/bin/zip -9vr, $(CURDIR)/$@ *)
+	cd $($@_TMPDIR) && /opt/netsurf/arm-unknown-riscos/env/bin/zip -9vr\, $(CURDIR)/$@ *
 	$(Q) $(RM) $($@_TMPDIR)
