add sdk library path

--- a/atari/Makefile.target
+++ b/atari/Makefile.target
@@ -52,6 +52,7 @@ LDFLAGS += -lcflib -lcurl
 LDFLAGS += -lcss -lparserutils -ldom -lwapcaplet -lhubbub
 LDFLAGS += -lssl -lcrypto
 LDFLAGS += -lxml2 -lz -liconv -lcares -lHermes -lwindom -lgem -lm
+LDFLAGS += -L$(GCCSDK_INSTALL_ENV)/lib
 
 
 # S_ATARI are sources purely for the Atari FreeMiNT build
