--- a/framebuffer/Makefile.target
+++ b/framebuffer/Makefile.target
@@ -21,7 +21,7 @@ NETSURF_FEATURE_GIF_CFLAGS := -DWITH_GIF
 CFLAGS += -Dnsframebuffer 
 
 #resource path
-CFLAGS += '-DNETSURF_FB_RESPATH="$(NETSURF_FB_RESPATH_$(NETSURF_FB_FRONTEND))"'
+CFLAGS += '-DNETSURF_FB_RESPATH="$(NETSURF_FB_RESPATH)"'
 
 # compile time font locations
 CFLAGS += '-DNETSURF_FB_FONTPATH="$(NETSURF_FB_FONTPATH)"'
