--- a/atari/Makefile.target
+++ b/atari/Makefile.target
@@ -79,4 +79,14 @@ S_ATARI := $(addprefix atari/,$(S_ATARI))
 SOURCES = $(S_COMMON) $(S_IMAGE) $(S_BROWSER) $(S_ATARI)
 EXETARGET := ns$(SUBTARGET)$(PRGSUFFIX)
 
+# ----------------------------------------------------------------------------
+# Install target
+# ----------------------------------------------------------------------------
 
+install-atari:
+
+# ----------------------------------------------------------------------------
+# Package target
+# ----------------------------------------------------------------------------
+
+package-atari:
