--- a/monkey/Makefile.target
+++ b/monkey/Makefile.target
@@ -1,3 +1,8 @@
+#
+# Makefile for NetSurf monkey target
+#
+# This file is part of NetSurf 
+
 # ----------------------------------------------------------------------------
 # Monkey flag setup (using pkg-config)
 # ----------------------------------------------------------------------------
@@ -65,3 +70,15 @@ S_MONKEY := $(addprefix monkey/,$(S_MONKEY))
 #   are not yet available
 SOURCES = $(S_COMMON) $(S_IMAGE) $(S_BROWSER) $(S_PDF) $(S_MONKEY)
 EXETARGET := nsmonkey
+
+# ----------------------------------------------------------------------------
+# Install target
+# ----------------------------------------------------------------------------
+
+install-monkey:
+
+# ----------------------------------------------------------------------------
+# Package target
+# ----------------------------------------------------------------------------
+
+package-monkey:
