--- a/beos/Makefile.target
+++ b/beos/Makefile.target
@@ -111,3 +111,27 @@ RDEP_BEOS := $(addprefix beos/res/,$(RDEP_BEOS))			\
 #   are not yet available
 SOURCES = $(S_COMMON) $(S_IMAGE) $(S_BROWSER) $(S_BEOS)
 EXETARGET := NetSurf
+
+# ----------------------------------------------------------------------------
+# Install target
+# ----------------------------------------------------------------------------
+
+install-beos:
+#       TODO:HAIKU -- not sure if throbber is needed.  being left out for now.
+	mkdir -p $(DESTDIR)$(NETSURF_BEOS_BIN)
+	mkdir -p $(DESTDIR)$(NETSURF_BEOS_RESOURCES)
+#	mkdir -p $(DESTDIR)$(NETSURF_BEOS_RESOURCES)throbber
+	@copyattr -d $(EXETARGET) $(DESTDIR)$(NETSURF_BEOS_BIN)NetSurf
+	@cp -vRL beos/res/adblock.css $(DESTDIR)$(NETSURF_BEOS_RESOURCES)
+	@cp -vRL beos/res/ca-bundle.txt $(DESTDIR)$(NETSURF_BEOS_RESOURCES)
+	@cp -vRL beos/res/default.css $(DESTDIR)$(NETSURF_BEOS_RESOURCES)
+	@cp -vRL beos/res/beosdefault.css $(DESTDIR)$(NETSURF_BEOS_RESOURCES)
+	@cp -vRL gtk/res/license $(DESTDIR)$(NETSURF_BEOS_RESOURCES)
+#	@cp -vRL beos/res/throbber/*.png $(DESTDIR)$(NETSURF_BEOS_RESOURCES)throbber
+	gzip -9v < beos/res/messages > $(DESTDIR)$(NETSURF_BEOS_RESOURCES)messages 
+
+# ----------------------------------------------------------------------------
+# Package target
+# ----------------------------------------------------------------------------
+
+package-beos:
