--- a/framebuffer/Makefile.target
+++ b/framebuffer/Makefile.target
@@ -154,4 +154,20 @@ S_FRAMEBUFFER := $(addprefix framebuffer/,$(S_FRAMEBUFFER)) $(addprefix framebuf
 # Note this is deliberately *not* expanded here as common and image
 #   are not yet available
 SOURCES = $(S_COMMON) $(S_IMAGE) $(S_BROWSER) $(S_FRAMEBUFFER) $(S_IMAGES)
-EXETARGET := nsfb$(SUBTARGET)
+EXETARGET := nsfb
+
+# ----------------------------------------------------------------------------
+# Install target
+# ----------------------------------------------------------------------------
+
+install-framebuffer:
+	mkdir -p $(DESTDIR)$(NETSURF_FRAMEBUFFER_BIN)
+	mkdir -p $(DESTDIR)$(NETSURF_FRAMEBUFFER_RESOURCES)
+	@cp -v $(EXETARGET) $(DESTDIR)/$(NETSURF_FRAMEBUFFER_BIN)netsurf$(SUBTARGET)
+	@for F in default.css messages; do cp -vL framebuffer/res/$$F $(DESTDIR)/$(NETSURF_FRAMEBUFFER_RESOURCES); done
+
+# ----------------------------------------------------------------------------
+# Package target
+# ----------------------------------------------------------------------------
+
+package-framebuffer:
