--- a/atari/Makefile.target
+++ b/atari/Makefile.target
@@ -124,7 +124,7 @@ package-atari: $(ATARI_FONT_TMP_DIR)$(ATARI_FONT_NAME) $(PKGNAME)
 	$(VQ)echo Creating $(PKGNAME)
 
 $(PKGNAME): $(EXETARGET)
-	$(Q)$(STRIP) $(EXETARGET)
+#	$(Q)$(STRIP) $(EXETARGET)
 	$(Q)$(STACK) -S 256k $(EXETARGET)
 	$(Q)rm -rf $(ATARI_TARGET_DIR)
 	$(Q)rm -rf $(PKGNAME)
