Add debug symbols as they are incredibly useful to have on the auto-builds, and can always be overridden for release builds.

--- a/Makefile.defaults
+++ b/Makefile.defaults
@@ -261,7 +261,7 @@ ifeq ($(TARGET),amiga)
   NETSURF_AMIGA_USE_CAIRO := YES
 
   # Optimisation levels
-  CFLAGS += -O2 -Wuninitialized
+  CFLAGS += -O2 -Wuninitialized -gstabs
 
 endif
 
