--- a/framebuffer/Makefile.target
+++ b/framebuffer/Makefile.target
@@ -161,11 +161,15 @@ EXETARGET := nsfb
 # Install target
 # ----------------------------------------------------------------------------
 
+NETSURF_FRAMEBUFFER_RESOURCE_LIST := adblock.css credits.html	\
+	default.css internal.css licence.html messages		\
+	quirks.css welcome.html
+
 install-framebuffer:
 	mkdir -p $(DESTDIR)$(NETSURF_FRAMEBUFFER_BIN)
 	mkdir -p $(DESTDIR)$(NETSURF_FRAMEBUFFER_RESOURCES)
 	@cp -v $(EXETARGET) $(DESTDIR)/$(NETSURF_FRAMEBUFFER_BIN)netsurf$(SUBTARGET)
-	@for F in default.css messages; do cp -vL framebuffer/res/$$F $(DESTDIR)/$(NETSURF_FRAMEBUFFER_RESOURCES); done
+	@for F in $(NETSURF_FRAMEBUFFER_RESOURCE_LIST); do cp -vL framebuffer/res/$$F $(DESTDIR)/$(NETSURF_FRAMEBUFFER_RESOURCES); done
 
 # ----------------------------------------------------------------------------
 # Package target
