--- a/framebuffer/Makefile.target
+++ b/framebuffer/Makefile.target
@@ -163,7 +163,7 @@ EXETARGET := nsfb
 
 NETSURF_FRAMEBUFFER_RESOURCE_LIST := adblock.css credits.html	\
 	default.css internal.css licence.html messages		\
-	quirks.css welcome.html
+	netsurf.png quirks.css welcome.html
 
 install-framebuffer:
 	mkdir -p $(DESTDIR)$(NETSURF_FRAMEBUFFER_BIN)
