Import RISC OS distribution stuff.  (3rd party modules, etc.)

--- a/riscos/Makefile.target
+++ b/riscos/Makefile.target
@@ -120,6 +120,6 @@ netsurf.zip: $(EXETARGET)
 	$(eval $@_TMPDIR := $(shell mktemp -d))
 	$(Q) $(RM) $@
 	rsync --archive --verbose $(CURDIR)/!NetSurf $($@_TMPDIR)
-	mv $($@_TMPDIR)/!NetSurf/ReadMe $($@_TMPDIR)
+	mv $($@_TMPDIR)/riscos/distribution/ReadMe $($@_TMPDIR)
 	cd $($@_TMPDIR) && /opt/netsurf/arm-unknown-riscos/env/bin/zip -9vr\, $(CURDIR)/$@ *
 	$(Q) $(RM) -rf $($@_TMPDIR)
