If you pass CI_BUILD=xxx to make, it will build a CI #xxx into the version string and also mention it in the testament

--- a/Makefile.sources
+++ b/Makefile.sources
@@ -76,6 +76,7 @@ S_BROWSER := $(addprefix desktop/,$(S_BROWSER))
 
 # The following files depend on the testament
 content/fetchers/about.c: testament utils/testament.h
+desktop/version.c: testament utils/testament.h
 
 # Some extra rules for building the transliteration table.
 ifeq ($(HOST),riscos)
