Port urldb to nsurl.  Won't build since rest of NS needs ported to new urldb API.
+ urldb API now takes URLs as nsurl, rather than string.
+ urldb internally stores full URLs with nsurl ref.
+ urldb internally stores schemes as lwc_string.
+ Load and save of cookies and URL file may be slower since
  we now need to create a nsurl.
+ Everything else should be faster, and there should be much
  less allocating/freeing and much less parsing of the same
  url over and over again.
+ Updated urldbtest for new urldb API.
+ urldbtest now cleans up at the end
+ Added lwc_string itterator to end of urldbtest
+ Adding some broken URLs (such as http:domain/) will now
  work, since nsurl fixes (http://domain/) them.

--- a/test/Makefile
+++ b/test/Makefile
@@ -16,10 +16,11 @@ llcache_SRCS := content/fetch.c content/fetchers/curl.c \
 
 urldbtest_SRCS := content/urldb.c utils/url.c utils/utils.c utils/log.c \
 		desktop/options.c utils/messages.c utils/hashtable.c \
-		utils/filename.c test/urldbtest.c
+		utils/filename.c utils/nsurl.c utils/corestrings.c \
+		test/urldbtest.c
 
-urldbtest_CFLAGS := $(shell pkg-config --cflags libwapcaplet) -O2
-urldbtest_LDFLAGS := $(shell pkg-config --libs libwapcaplet)
+urldbtest_CFLAGS := $(shell pkg-config --cflags libwapcaplet libdom) -O2
+urldbtest_LDFLAGS := $(shell pkg-config --libs libwapcaplet libdom)
 
 nsurl_SRCS := utils/log.c utils/nsurl.c test/nsurl.c
 nsurl_CFLAGS := $(shell pkg-config --cflags libwapcaplet)
