Preserve the executable attribute, and ensure we copy the correct binary in all scenarios

--- a/amiga/Makefile.target
+++ b/amiga/Makefile.target
@@ -119,7 +119,7 @@ netsurf.lha: $(EXETARGET)
 	$(VQ)echo Creating netsurf.lha
 	$(Q)rm -rf $(AMIGA_INSTALL_TARGET_DIR)
 	$(Q)mkdir -p $(AMIGA_INSTALL_TARGET_DIR)/NetSurf
-	$(Q)cp NetSurf $(AMIGA_INSTALL_TARGET_DIR)/NetSurf
+	$(Q)cp -p $(EXETARGET) $(AMIGA_INSTALL_TARGET_DIR)/NetSurf
 	$(Q)mkdir $(AMIGA_INSTALL_TARGET_DIR)/NetSurf/Resources
 	$(Q)cp -r $(AMIGA_RESOURCES) $(AMIGA_INSTALL_TARGET_DIR)/NetSurf/Resources
 	$(Q)cp -r $(AMIGA_DISTRIBUTION_FILES) $(AMIGA_INSTALL_TARGET_DIR)/NetSurf
