--- a/Makefile.sources
+++ b/Makefile.sources
@@ -17,9 +17,9 @@ S_RENDER := box.c box_construct.c box_normalise.c			\
 	html_forms.c imagemap.c layout.c list.c search.c table.c	\
 	textinput.c textplain.c
 
-S_UTILS := base64.c corestrings.c filename.c hashtable.c locale.c	\
-	messages.c nsurl.c talloc.c url.c utf8.c utils.c useragent.c	\
-	filepath.c log.c
+S_UTILS := base64.c corestrings.c filename.c filepath.c hashtable.c	\
+	libdom.c locale.c log.c messages.c nsurl.c talloc.c url.c	\
+	utf8.c utils.c useragent.c
 
 S_HTTP := challenge.c generics.c primitives.c parameter.c		\
 	content-disposition.c content-type.c www-authenticate.c
