--- a/amiga/Makefile.target
+++ b/amiga/Makefile.target
@@ -64,7 +64,13 @@ else
     LDFLAGS += -lauto -lpbl
   endif
 
-  EXETARGET := NetSurf
+  ifeq ($(NETSURF_AMIGA_USE_CAIRO),YES)
+    CFLAGS += -DNS_AMIGA_CAIRO -I /SDK/local/common/include/cairo
+    LDFLAGS += -use-dynld -ldl -lcairo -lpixman-1 -lfreetype -lfontconfig -lpng -lexpat
+    EXETARGET := NetSurf
+  else
+    EXETARGET := NetSurf-Static
+  endif
 endif
 
 ifeq ($(NETSURF_USE_MOZJS),YES)
