--- a/amiga/Makefile.target
+++ b/amiga/Makefile.target
@@ -65,8 +65,10 @@ else
   endif
 
   ifeq ($(NETSURF_AMIGA_USE_CAIRO),YES)
-    CFLAGS += -DNS_AMIGA_CAIRO -I /SDK/local/common/include/cairo
-    LDFLAGS += -use-dynld -ldl -lcairo -lpixman-1 -lfreetype -lfontconfig -lpng -lexpat
+    CFLAGS += -DNS_AMIGA_CAIRO
+	CFLAGS += $(shell $(PKG_CONFIG) --cflags cairo)
+    LDFLAGS += -use-dynld
+	LDFLAGS += $(shell $(PKG_CONFIG) --libs cairo)
     EXETARGET := NetSurf
   else
     EXETARGET := NetSurf-Static
