--- a/amiga/Makefile.target
+++ b/amiga/Makefile.target
@@ -37,8 +37,8 @@ ifeq ($(HOST),amiga)
   LDFLAGS += -lssl -lcrypto -ldom -lhubbub -lcss -lparserutils -lwapcaplet
 
   ifeq ($(NETSURF_AMIGA_CAIRO_AVAILABLE),yes)
-    CFLAGS += -DNS_AMIGA_CAIRO -I /SDK/local/common/include/cairo
-    LDFLAGS += -use-dynld -ldl -lcairo -lpixman-1 -lfreetype -lfontconfig -lpng -lexpat
+    CFLAGS += -I /SDK/local/common/include/cairo
+    LDFLAGS += -use-dynld
     EXETARGET := NetSurf
   else
     EXETARGET := NetSurf-Static
